--- a/Skills_Wordcloud.Rmd
+++ b/Skills_Wordcloud.Rmd
@@ -2,7 +2,21 @@
 title: "Wordcloud"
 author: "Jawaid Hakim"
 date: "`r Sys.Date()`"
-output: html_document
+output:
+  
+  pdf_document: 
+    toc: true
+    number_sections: true
+  html_document:
+    
+    toc: true
+    toc_float: true
+    number_sections: true
+boxlinks: true
+urlcolor: blue
+always_allow_html: true
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
@@ -18,8 +32,8 @@ library(RMariaDB)
 library(dplyr)
 library(knitr)
 library(wordcloud)
-library(wordcloud2)
 library(RColorBrewer)
+
 ```
 
 # Data
@@ -79,10 +93,3 @@ wordcloud::wordcloud(words = skills_summary$SKILL_KEYWORD,
                      scale = c(2.5, 0.40))
 
 ```
-Generate skills wordcloud2.
-
-```{r}
-set.seed(1234)
-wordcloud2(data=skills_summary, color = 'random-dark', shape = 'circle', size = 1.0)
-```
-
